Re-added element status (draft/finalised). & Fixed various issues with responsiveness on mobile for tables

--- a/src/style/_default.scss
+++ b/src/style/_default.scss
@@ -197,20 +197,4 @@ a {
 }
 
 
-
-.loading-spinner {
-  @include size();
-  div {
-    position: absolute;
-    top:70%;
-    left:40%;
-  }
-  i {
-    font-size: 75px;
-  }
-}
 .mat-checkbox-layout { white-space: normal !important; }
-
-.badge {
-  font-size: 100%;
-}
